Add a page with a random card

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,7 @@
+<p>
+  Home | <a href="/cards/random">Random card</a>
+</p>
+
 <ul>
   <% @cards.each do |card| %>
     <% if params[:flip] == card[:id] %>
