Add a link to Cambridge dictionary

--- a/views/card.erb
+++ b/views/card.erb
@@ -9,3 +9,7 @@
   <a href="?flip"><%= @card[:middle] %></a>
   <% end %>
 </h1>
+
+<p>
+  Look up <a target="_blank" href="https://dictionary.cambridge.org/search/learner-english/direct/?q=<%= @card[:middle] %>"><%= @card[:middle] %></a> in the Cambridge dictionary.
+</p>
