--- a/views/card.erb
+++ b/views/card.erb
@@ -11,5 +11,5 @@
 </h1>
 
 <p>
-  Look up <a target="_blank" href="https://dictionary.cambridge.org/search/learner-english/direct/?q=<%= @card[:middle] %>"><%= @card[:middle] %></a> in the Cambridge dictionary.
+  Look it up in: <a target="_blank" href="https://dictionary.cambridge.org/search/learner-english/direct/?q=<%= @card[:middle] %>">Cambridge Dictionary</a> | <a target="_blank" href="https://translate.google.nl/#auto/ru/<%= @card[:middle] %>">Google Translate</a>
 </p>
