Extract the form into a separate page

--- a/views/cards.erb
+++ b/views/cards.erb
@@ -1,14 +1,6 @@
 <p>
-  <a href="/">Home</a> | <a href="/cards/random">Random card</a> | All cards
+  <a href="/">Home</a> | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | Manage
 </p>
-
-<h2>Create new card</h2>
-
-<form action="/cards" method="post">
-  Front side: <input type="text" name="front" placeholder="Enjoy *life*.">
-  Translation: <input type="text" name="back" placeholder="жизнь">
-  <input type="submit" value="Create">
-</form>
 
 <h2>Your cards</h2>
 
