--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <p>
-  Home | <a href="/cards/random">Random card</a> | <a href="/cards">All cards</a>
+  Home | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | <a href="/cards">Manage</a>
 </p>
 
 <ul>
