--- a/views/card.erb
+++ b/views/card.erb
@@ -1,5 +1,5 @@
 <p>
-  <a href="/">Home</a> | <a href="/cards/random">Random card</a> | <a href="/cards">All cards</a>
+  <a href="/">Home</a> | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | <a href="/cards">Manage</a>
 </p>
 
 <h1>
