--- a/views/new.erb
+++ b/views/new.erb
@@ -2,7 +2,7 @@
   <a href="/">Home</a> | <a href="/cards/random">Random</a> | New card | <a href="/cards">Manage</a>
 </p>
 
-<h2>Create new card</h2>
+<h2>New card</h2>
 
 <div>
 <form action="/cards" method="post">
