--- a/views/card.erb
+++ b/views/card.erb
@@ -15,6 +15,6 @@
 </p>
 
 <form action="/cards/<%= @card[:id] %>" method="post">
-  <input type="hidden" name="_method" value="delete"/>
-  <input value="Delete" type="submit"/>
+  <input type="hidden" name="_method" value="delete">
+  <input value="Delete" type="submit">
 </form>
