--- a/views/card.erb
+++ b/views/card.erb
@@ -14,7 +14,11 @@
   Look it up in: <a target="_blank" href="https://dictionary.cambridge.org/search/learner-english/direct/?q=<%= @card[:middle] %>">Cambridge Dictionary</a> | <a target="_blank" href="https://translate.google.nl/#auto/ru/<%= @card[:middle] %>">Google Translate</a>
 </p>
 
-<form action="/cards/<%= @card[:id] %>" method="post">
+<form action="/cards/<%= @card[:id] %>/edit" style="display: inline">
+  <input value="Edit" type="submit">
+</form>
+
+<form action="/cards/<%= @card[:id] %>" method="post" style="display: inline">
   <input type="hidden" name="_method" value="delete">
   <input value="Delete" type="submit">
 </form>
