Extract Header to a partial

--- a/views/card.erb
+++ b/views/card.erb
@@ -1,6 +1,4 @@
-<p>
-  <a href="/">Home</a> | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | <a href="/cards">Manage</a>
-</p>
+<%= erb :header %>
 
 <h1>
   <% if params.key?(:flip) %>
