--- a/views/cards.erb
+++ b/views/cards.erb
@@ -1,6 +1,4 @@
-<p>
-  <a href="/">Home</a> | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | Manage
-</p>
+<%= erb :header %>
 
 <h2>All your cards</h2>
 
