--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,4 @@
-<p>
-  Home | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | <a href="/cards">Manage</a>
-</p>
+<%= erb :header %>
 
 <h2>Cards you are currently learning</h2>
 
