--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,4 @@
-<p>
-  <a href="/">Home</a> | <a href="/cards/random">Random</a> | New card | <a href="/cards">Manage</a>
-</p>
+<%= erb :header %>
 
 <h2>New card</h2>
 
