--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,4 @@
 <form action="/login" method="post">
-  Your email: <input type="text" name="email">
+  Your email: <input type="email" name="email">
   <input type="submit" value="Continue">
 </form>
