Update title tag on all pages

--- a/views/card.erb
+++ b/views/card.erb
@@ -1,5 +1,5 @@
 <% content_for(:title) do %>
-<%= "#{@card[:middle]} - Cards" -%>
+<%= "#{@card[:middle]} | Cards" %>
 <% end %>
 
 <%= erb :header %>
