--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,3 +1,7 @@
+<% content_for(:title) do %>
+<%= "#{@card[:middle]} - Edit | Cards" %>
+<% end %>
+
 <p>
   <a href="/">Home</a> | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | <a href="/cards">Manage</a>
 </p>
