Add front side of the card on the card page

--- a/views/card.erb
+++ b/views/card.erb
@@ -13,6 +13,10 @@
 </h1>
 
 <p>
+<i><%= @card[:left] %><b><%= @card[:middle] %></b><%= @card[:right] %></i>
+</p>
+
+<p>
   Look it up in: <a target="_blank" href="https://dictionary.cambridge.org/search/learner-english/direct/?q=<%= @card[:middle] %>">Cambridge Dictionary</a> | <a target="_blank" href="https://translate.google.nl/#auto/ru/<%= @card[:middle] %>">Google Translate</a>
 </p>
 
