--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
       <%= yield_content(:title) { "Cards" } %>
     </title>
     <link rel="stylesheet" href="/styles.css">
+    <%= erb :crisp %>
   </head>
   <body>
     <div class="content">
