--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@ Home | Cards
 
 <%= erb :header %>
 
-<h2>Cards you are currently learning</h2>
+<h1>Learning deck</h1>
 
 <ol>
   <% @cards.each do |card| %>
