--- a/views/header.erb
+++ b/views/header.erb
@@ -1,4 +1,4 @@
-<a href="/">Home</a> | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | <a href="/cards">Manage</a>
+<a href="/">Home</a> | <a href="/cards/random">Random</a> | <a href="/cards/new">New card</a> | <a href="/cards">All cards</a>
 
 <form action="/logout" method="post" style="display: inline; float: right">
   <input value="Log Out" type="submit">
