--- a/views/card.erb
+++ b/views/card.erb
@@ -20,6 +20,18 @@
   Look it up in: <a target="_blank" href="https://dictionary.cambridge.org/search/learner-english/direct/?q=<%= @card[:middle] %>">Cambridge Dictionary</a> | <a target="_blank" href="https://translate.google.nl/#auto/ru/<%= @card[:middle] %>">Google Translate</a>
 </p>
 
+<% if @card[:current] %>
+<form action="/current-cards/<%= @card[:id] %>" method="post" style="display: inline">
+  <input type="hidden" name="_method" value="delete">
+  <input value="Remove" type="submit">
+</form>
+<% else %>
+<form action="/current-cards" method="post" style="display: inline">
+  <input type="hidden" name="id" value="<%= @card[:id] %>">
+  <input type="submit" value="Add">
+</form>
+<% end %>
+
 <form action="/cards/<%= @card[:id] %>/edit" style="display: inline">
   <input value="Edit" type="submit">
 </form>
