Add a log message

--- a/views/header.erb
+++ b/views/header.erb
@@ -4,6 +4,8 @@
   <% to("/cards/current/random") %>
 <% end %>
 
+<% logger.info(random_card_path.inspect) %>
+
 <a href="/">Home</a> |
 <a href="<%= random_card_path %>">Random</a> |
 <a href="/cards/new">New card</a> |
