--- a/views/settings.erb
+++ b/views/settings.erb
@@ -4,6 +4,10 @@ Settings | Cards
 
 <%= erb :header %>
 
+<form action="/logout" method="post">
+  <p><input value="Log Out" type="submit"></p>
+</form>
+
 <h1>Settings</h1>
 
 <form action="/random" method="post">
