--- a/views/header.erb
+++ b/views/header.erb
@@ -1,7 +1,9 @@
+<form action="/logout" method="post" style="display: inline; float: right">
+  <input value="Log Out" type="submit">
+</form>
+
 <p>
   <a href="/">Home</a> |
   <a href="<%= random_card_path %>">Random</a> |
-  <a href="/cards/new">New card</a> |
-  <a href="/cards">All cards</a> |
   <a href="/settings">Settings</a>
 </p>
