Center the subheader text

--- a/views/subheader.erb
+++ b/views/subheader.erb
@@ -1,4 +1,4 @@
-<p>
+<p class="subheader">
   <a href="/">Learning deck</a> |
   <a href="/cards">All cards</a> |
   <a href="/cards/new">New card</a>
