Add the about page

--- a/views/header.erb
+++ b/views/header.erb
@@ -1,8 +1,9 @@
-<form action="/logout" method="post" style="display: inline; float: right">
-  <input value="Log Out" type="submit">
-</form>
-
 <p>
+  <span style="display: inline; float: right">
+    <a href="/about">About</a> |
+    <a href="/logout">Log out</a>
+  </span>
+
   <a href="/">Home</a> |
   <a href="<%= random_card_path %>">Random</a> |
   <a href="/settings">Settings</a>
