--- a/views/settings.erb
+++ b/views/settings.erb
@@ -8,7 +8,7 @@ Settings | Cards
 
 <form action="/random" method="post">
   <fieldset>
-    <legend>Which cards to use when you click the "Random" button?</legend>
+    <legend>Which cards to use when you click "Random"?</legend>
     <ul>
       <li>
       <label for="deckonly">learning deck only</label>
