--- a/views/header.erb
+++ b/views/header.erb
@@ -1,10 +1,10 @@
 <p>
   <span style="display: inline; float: right">
-    <a href="/about">About</a> |
+    <a href="/settings">Settings</a> |
     <a href="/logout">Log out</a>
   </span>
 
   <a href="/">Home</a> |
   <a href="<%= random_card_path %>">Random</a> |
-  <a href="/settings">Settings</a>
+  <a href="/cards/new" title="Add new card">New</a>
 </p>
