--- a/views/cards.erb
+++ b/views/cards.erb
@@ -1,9 +1,8 @@
 <% content_for(:title) do %>
-Manage | Cards
+All Cards | Learn a Word
 <% end %>
 
 <%= erb :header %>
-<%= erb :subheader %>
 
 <h1>All cards</h1>
 
@@ -13,6 +12,9 @@ Manage | Cards
       <form action="/current-cards" method="post" style="display: inline">
 	<input type="hidden" name="id" value="<%= card[:id] %>">
 	<input type="submit"<%= 'disabled="disabled"' if card[:current] %> value="Add">
+      </form>
+      <form action="/cards/<%= card[:id] %>" method="get" style="display: inline">
+	<input value="Open" type="submit">
       </form>
       <a href="/cards/<%= card[:id] %>"><%= card[:middle] %></a>
     </li>
